--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 
 lib/__pycache__/ConsoleMasterPy.cpython-310.pyc
 log.txt
+lib/__pycache__/REN.cpython-310.pyc
+lib/classes/__pycache__/ConsoleMaster.cpython-310.pyc
