--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,7 @@ lib/__pycache__/ConsoleMasterPy.cpython-310.pyc
 log.txt
 lib/__pycache__/REN.cpython-310.pyc
 lib/classes/__pycache__/ConsoleMaster.cpython-310.pyc
+src/__pycache__/REN.cpython-310.pyc
+src/ConsoleMasterPy/__pycache__/__init__.cpython-310.pyc
+src/ConsoleMasterPy/__pycache__/ConsoleMaster.cpython-310.pyc
+src/__pycache__/ConsoleMasterPy.cpython-310.pyc
