--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,5 @@ src/ConsoleMasterPy.egg-info/dependency_links.txt
 src/ConsoleMasterPy.egg-info/PKG-INFO
 src/ConsoleMasterPy.egg-info/SOURCES.txt
 src/ConsoleMasterPy.egg-info/top_level.txt
+*.gz
+*.whl
